<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:criview="http://schemas.android.com/apk/res/com.online.hall"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/default_gray"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginTop="0.5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/packinfo_monthcost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:background="@color/default_white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/package_monthcost"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/packinfo_monthcost_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0.5dp"
                android:layout_weight="0.4"
                android:background="@color/default_white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/package_null"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginTop="0.5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/packinfo_netflow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:background="@color/default_white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/package_netflow"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/packinfo_netflow_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0.5dp"
                android:layout_weight="0.4"
                android:background="@color/default_white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/package_null"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginTop="0.5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/packinfo_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:background="@color/default_white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/package_numberselect"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/packinfo_number_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0.5dp"
                android:layout_weight="0.4"
                android:background="@color/default_white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/package_null"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0.5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/packinfo_msn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:background="@color/default_white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/package_msn"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/packinfo_msn_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0.5dp"
                android:layout_weight="0.4"
                android:background="@color/default_white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/package_null"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/packinfo_packinfo_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp"
        android:text="@string/app_name"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/packinfo_ok"
            android:scaleType="fitXY"
            android:src="@drawable/layitem_line" />

        <com.hall.view.CriButton
            android:id="@+id/packinfo_ok"
            criview:style="FILL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:background="@null"
            android:padding="10dp"
            android:text="@string/package_open"
            android:textColor="@color/default_white"
            android:textSize="17sp" />
    </RelativeLayout>

</LinearLayout>