<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:criview="http://schemas.android.com/apk/res/com.online.hall"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/my_item_layout_package"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="8dp" >

        <ImageView
            android:id="@+id/ImageView03"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="center"
            android:src="@drawable/check_layout_pack" />

        <TextView
            android:id="@+id/openline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ImageView03"
            android:layout_alignTop="@+id/ImageView03"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@+id/CriButton02"
            android:layout_toRightOf="@+id/ImageView03"
            android:gravity="center_vertical"
            android:text="@string/addbus_callturn"
            android:textColor="#000"
            android:textSize="14sp" />

        <com.hall.view.CriButton
            android:id="@+id/openline_check"
            criview:style="FILL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/check"
            android:textColor="@color/default_white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/openline_show_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:visibility="visible" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/layitem_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/openline_status_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="您的开通状态:已开通什么功能" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <com.hall.view.CriButton
                    android:id="@+id/openline_open"
                    criview:style="FILL"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/open"
                    android:textColor="@color/default_white" />

                <com.hall.view.CriButton
                    android:id="@+id/openline_cancle"
                    criview:style="FILL"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/cancle"
                    android:textColor="@color/default_white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/layitem_line" />

</LinearLayout>