<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:criview="http://schemas.android.com/apk/res/com.online.hall"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <com.hall.view.TopLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.hall.view.TopLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#f5f5f5" >

        <LinearLayout
            android:id="@+id/regist_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/default_gray"
            android:orientation="vertical"
            android:padding="1dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/default_white"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/register_layout_phone" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageView2"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/imageView2"
                    android:layout_toRightOf="@+id/imageView2"
                    android:background="@color/default_white"
                    android:ems="10"
                    android:hint="@string/user_phone"
                    android:paddingLeft="8dp"
                    android:textSize="13sp" >

                    <requestFocus />
                </EditText>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp" >

                <ImageView
                    android:id="@+id/ImageView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/default_white"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/register_layout_passwd" />

                <EditText
                    android:id="@+id/EditText01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/ImageView01"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/ImageView01"
                    android:layout_toRightOf="@+id/ImageView01"
                    android:background="@color/default_white"
                    android:ems="10"
                    android:hint="@string/user_passwd_hint"
                    android:paddingLeft="8dp"
                    android:textSize="13sp" >
                </EditText>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp" >

                <ImageView
                    android:id="@+id/ImageView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/default_white"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/register_layout_pass1" />

                <EditText
                    android:id="@+id/EditText02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/ImageView02"
                    android:layout_alignTop="@+id/ImageView02"
                    android:layout_toRightOf="@+id/ImageView02"
                    android:background="@color/default_white"
                    android:ems="10"
                    android:hint="@string/user_input_code"
                    android:paddingLeft="8dp"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/EditText02"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/EditText02"
                    android:background="#fff"
                    android:padding="5dp" >

                    <com.hall.view.CriButton
                        android:id="@+id/button1"
                        criview:style="FILL"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:padding="3dp"
                        android:text="@string/send_code"
                        android:textColor="@color/default_white"
                        android:textSize="14sp"
                        criview:corder="5" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <com.hall.view.CriButton
            android:id="@+id/register_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/regist_center"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/regist_center"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:padding="8dp"
            android:text="注册"
            android:textColor="@color/default_white"
            android:textSize="17sp"
            
             />
    </RelativeLayout>

</LinearLayout>